--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 fastapi==0.110.0
 uvicorn[standard]==0.29.0
-httpx==0.27.0
 pydantic>=2.7.0
-python-jose==3.3.0
-PyJWT==2.8.0
-pytz==2024.1
 python-dotenv==1.0.1
+groq
+httpx==0.27.0   # optional, keep if you’ll call APIs
