--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.110.0
 uvicorn[standard]==0.29.0
+httpx==0.27.0
 pydantic>=2.7.0
 python-dotenv==1.0.1
-groq
-httpx==0.27.0   # optional, keep if you’ll call APIs
+requests
